# ratcrate-tui

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SUPPORT.md  test_flow_professional.sh
.github/: SECURITY.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: TestRelease.yml  all-releases.yml  ci.yml  greetings.yml  security-audit.yml
src/: cache.rs  main.rs  types.rs
