[package]
name = "ratcrates"
version = "0.1.0"
edition = "2024"
description = "Discover and manage ratatui terminal applications"
authors = ["Your Name <qfey@icloud.com>"]
license = "MIT"
repository = "https://github.com/rvbug/ratcrates"
readme = "README.md"
keywords = ["tui", "terminal", "ratatui", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "ratcrates"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
clap = "4.5.40"
colored = "3.0.0"
dialoguer = "0.11.0"
reqwest = "0.12.22"
serde = "1.0.219"
serde_json = "1.0.140"
tabled = "0.20.0"
tokio = "1.46.1"
